--- a/app/src/main/res/layout/campaign.xml
+++ b/app/src/main/res/layout/campaign.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".Campaign">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF"
@@ -24,13 +24,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/donorid"
+                android:id="@+id/campaign_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#000000"
                 android:layout_gravity="center"
                 android:layout_marginTop="40dp"
                 android:textSize="20dp"
-                android:text="Campaign ID" />
+                android:text="" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,7 +41,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/gender"
+                    android:id="@+id/cm"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -48,10 +49,10 @@
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Campaign ID ID" />
+                    android:text="Campaign manager incharge" />
 
                 <TextView
-                    android:id="@+id/gendert"
+                    android:id="@+id/cmt"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -60,7 +61,7 @@
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="C01" />
+                    android:text="" />
 
             </LinearLayout>
 
@@ -72,7 +73,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/bloodtype"
+                    android:id="@+id/date"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -80,10 +81,10 @@
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Start Time"/>
+                    android:text="Date"/>
 
                 <TextView
-                    android:id="@+id/bloodtypet"
+                    android:id="@+id/datet"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -92,7 +93,7 @@
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="12:00"/>
+                    android:text=""/>
 
             </LinearLayout>
 
@@ -104,7 +105,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/birthday"
+                    android:id="@+id/start_time"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -112,10 +113,10 @@
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="End Time" />
+                    android:text="Start time" />
 
                 <TextView
-                    android:id="@+id/birthdayt"
+                    android:id="@+id/start_timet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -123,7 +124,7 @@
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="10dp"
-                    android:text="14:00"
+                    android:text=""
                     android:textSize="15dp" />
 
 
@@ -137,7 +138,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/age"
+                    android:id="@+id/end_time"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -145,10 +146,10 @@
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Address" />
+                    android:text="End time" />
 
                 <TextView
-                    android:id="@+id/aget"
+                    android:id="@+id/end_timet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -157,7 +158,7 @@
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="35, Reid Avenue, Colombo 7" />
+                    android:text="" />
 
             </LinearLayout>
 
@@ -169,7 +170,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/weight"
+                    android:id="@+id/location"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -177,11 +178,11 @@
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Contact" />
+                    android:text="Location" />
 
                 <TextView
-                    android:id="@+id/weightt"
-                    android:layout_width="100dp"
+                    android:id="@+id/locationt"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
@@ -189,16 +190,73 @@
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="0714548926" />
+                    android:text="" />
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15dp"
+                    android:text="Address" />
+
+                <TextView
+                    android:id="@+id/addresst"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="" />
+
+            </LinearLayout>
+
+            <CheckBox
+                android:id="@+id/attending"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_gravity="center"
+                android:text="Mark as attending"/>
+
+
+            <Button
+                android:id="@+id/btn"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="100dp"
+                android:background="@color/colorPrimary"
+                android:text="Save"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="15dp" />
 
 
 
 
         </LinearLayout>
-    </LinearLayout>
+
+
+
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
