--- a/app/src/main/res/layout/view_profile_doctor.xml
+++ b/app/src/main/res/layout/view_profile_doctor.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditProfileActivity">
+    tools:context=".ViewProfileDoctor">
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,17 +20,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/user_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
-        android:text="Username"
         android:textSize="27dp" />
+
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:textSize="27dp" />
 
     <ImageView
         android:id="@+id/avatar"
@@ -45,10 +56,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/unl"
+            android:id="@+id/username"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -57,66 +69,47 @@
             android:text="Username"
             android:textSize="15dp" />
 
-        <EditText
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            android:hint="olien" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <TextView
-            android:id="@+id/fnl"
-            android:layout_width="100dp"
+            android:id="@+id/usernamet"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:layout_marginRight="40dp"
-            android:text="First Name"
             android:textSize="15dp" />
 
-        <EditText
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            android:hint="Olien" />
-
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/lnl"
+            android:id="@+id/address"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:layout_marginRight="40dp"
-            android:text="Last Name"
+            android:text="Address"
             android:textSize="15dp" />
 
-        <EditText
-            android:layout_width="250dp"
+        <TextView
+            android:id="@+id/addresst"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            android:hint="Kim" />
+            android:textSize="15dp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -129,12 +122,13 @@
             android:text="Hospital"
             android:textSize="15dp" />
 
-        <EditText
-            android:layout_width="250dp"
+        <TextView
+            android:id="@+id/hospitalt"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            android:hint="National Hospital, Colombo" />
+            android:textSize="15dp" />
 
 
     </LinearLayout>
@@ -142,10 +136,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/emalil"
+            android:id="@+id/email"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -154,22 +149,24 @@
             android:text="Email"
             android:textSize="15dp" />
 
-        <EditText
-            android:layout_width="250dp"
+        <TextView
+            android:id="@+id/emailt"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            android:hint="otnliya19@gmail.com" />
+            android:textSize="15dp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/contactl"
+            android:id="@+id/contact"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -178,38 +175,42 @@
             android:text="Contact"
             android:textSize="15dp" />
 
-        <EditText
-            android:layout_width="250dp"
+        <TextView
+            android:id="@+id/contactt"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            android:hint="+94527364826" />
+            android:textSize="15dp" />
 
     </LinearLayout>
 
 
     <Button
+        android:id="@+id/btn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:text="Change Password"
+        android:text="Edit profile"
+        android:textAllCaps="false"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:textSize="15dp" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:onClick="toActivity3"
-        android:text="Save"
-        android:textAllCaps="false"
-        android:layout_marginBottom="100dp"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:textSize="15dp" />
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="170dp"
+            android:text="Logout"
+            android:onClick="toMainActivity"
+            android:textAllCaps="false"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"
+            android:textSize="15dp" />
 
     </LinearLayout>
 
